--- a/PetStoreApiTestsBDD/PetStoreApiTestsBDD.csproj
+++ b/PetStoreApiTestsBDD/PetStoreApiTestsBDD.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
   </ItemGroup>
 
 </Project>
